--- a/main.css
+++ b/main.css
@@ -282,4 +282,11 @@ body{
     .messages{
         width: 140%;
     }
+
+    .bottom input{
+        width: 550px;
+        height: 60px;
+        border: none;
+        font-size: 20px;
+}
 }
