--- a/main.css
+++ b/main.css
@@ -242,8 +242,12 @@ body{
         width: 100%;
     }
 
+    .main .left{
+        width: 100%;
+    }
+
     .header{
-        width: 400px;
+        width: 100%;
         font-family: 'Poppins', sans-serif;
     }
 
@@ -253,6 +257,7 @@ body{
         justify-content: center;
         align-items: center;
         margin-top: 10px;
+        margin-right: 10px;
     }
 
     .bottom{
@@ -275,18 +280,18 @@ body{
     }
 
     .empty-msg{
-        width: 400px;
-        height: 800px;
+        width: 100%;
+        height: 90vh;
     }
 
     .messages{
-        width: 140%;
+        width: 100%;
     }
 
     .bottom input{
         width: 550px;
         height: 60px;
         border: none;
-        font-size: 20px;
+        font-size: 18px;
 }
 }
