--- a/main.css
+++ b/main.css
@@ -277,11 +277,12 @@ body{
         width: 390px;
         font-size: 25px;
         margin-top: 20px;
+        margin-right: 10px;
     }
 
     .empty-msg{
         width: 100%;
-        height: 90vh;
+        height: 50vh;
     }
 
     .messages{
@@ -290,7 +291,7 @@ body{
 
     .bottom input{
         width: 550px;
-        height: 60px;
+        height: 45px;
         border: none;
         font-size: 18px;
 }
