--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body{
 .main .right{
     width: 30%;
     height: 100vh;
-    background-color: #b2fab4;
+    background-color: #c8e6c9;
     display: flex;
     flex-direction: column;
     align-items: center;
